# rayball

./: CMakeLists.txt  Makefile  README.md  Vector3.h  main.cpp  wood.ppm
